# mcp-ig-extension

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
config/: accounts.json
docs/: key-schema.md
src/: config_loader.py  handler.py  ig_client.py  mcp_client.py  models.py  secrets.py
terraform/: ecr.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
tests/: test_config_loader.py  test_secrets.py
