[project]
name = "mcp-ig-extension"
version = "0.1.0"
description = "Scheduled container Lambda that monitors Instagram accounts and writes metrics to grok-memory-mcp over HTTPS"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mike Estes"}
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/mikeestes/mcp-ig-extension"
Repository = "https://github.com/mikeestes/mcp-ig-extension"
Issues = "https://github.com/mikeestes/mcp-ig-extension/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "handler",
    "config_loader",
    "secrets",
    "mcp_client",
    "ig_client",
    "models",
]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]